# amb_print_app

./: .env.example  .gitignore  DEVELOPMENT.md  PHASE3_TEST_STRATEGY.md  README.md  SANDBOX_TEST_GUIDE.md  TEST_DEBUGGING_SUMMARY.md  URGENT_SYNC_FROM_GITHUB.md  app_migrator_bridge.py  generate_migrator_config.py  main.py  process_pdfs.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
amb_print/: hooks.py  install.py  modules.txt  tasks.py
amb_print/amb_print/: api.py
amb_print/amb_print/doctype/print_migration_document_type/: print_migration_document_type.json  print_migration_document_type.py
amb_print/amb_print/doctype/print_migration_job/: print_migration_job.js  print_migration_job.json  (+1 more)
amb_print/core/: __init__.py  batch_processor.py  erpnext_api.py
config/: credentials.json.template
docs/: AI_AGENT_SOP.md# AI AGENT DEPLOYMENT & OPERATIONS SOP.md  LESSONS_LEARNED.md  PROJECT_ROADMAP.md  WYSIWYG_PRINT_FORMAT_GUIDE.md
docs/tests/: PHASE4_EXECUTION_GUIDE.md
scripts/: 06_api_upload.py  07_batch_migration_debug.py  08_phase4_orchestrator.py  09_task_manager.py
src/: config.py  pdf_parser.py  template_generator.py
src/exporters/: README.md  __init__.py  base_exporter.py  html_jinja_exporter.py
src/ui/: README.md  __init__.py  field_palette.py  mapping_editor.py  pdf_preview.py  signature_uploader.py  table_mapper.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_pdf_to_export_workflow.py
tests/unit/: __init__.py  test_base_exporter.py  test_html_jinja_exporter.py
(+5 files in other folders)
